<resources>
    <string name="app_name">TrekBook</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaHRpbnRlcmEiLCJhIjoiY2swcmQ4a2J4MDU0NzNtcm5hZ2hzeWdzeCJ9.RWTp_A463vOrlzI2p_Hy2g</string>
    <string name="input_description">Input Description Here</string>
    <string name="input_title">Input Title Here</string>
    <string name="input_bio">Here is the location where the user bio will end up, \n\nBe sure to include all the details on what makes your profile worth visiting and tell us a little about yourself!</string>
    <string name="submit_description">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"incorrect credentials"</string>
    <string name="login_no_text">"empty login fields"</string>
    <string name="sign_up_user_exists">"that username is in use"</string>
    <string name="no_connection_to_server">"no connection to server, check your internet connection"</string>
    <string name="prompt_register">"don't have an account? click here!"</string>
    <string name="welcome_user">"Welcome: "</string>
    <string name="welcome_text">"Trekbook Traveling"</string>
    <string name="welcome_subtext">"track and share you trips around the world, in real time"</string>
    <!-- registration page strings -->
    <string name="title_activity_signup">Create An Account!</string>
    <string name="first_name_hint">"first name"</string>
    <string name="last_name_hint">"last name"</string>
    <string name="conf_hint">"confirm password"</string>
    <string name="recovery_hint">"enter answer to above question"</string>
    <string-array name="recovery_questions">
        <item>[select a recovery question]</item>
        <item>what city were you born in?</item>
        <item>what was the name of your first pet?</item>
        <item>what school did you attend in sixth grade?</item>
        <item>what was the name of your first kiss?</item>
        <item>what was the make and model of your first car?</item>
    </string-array>
    <string name="signup_submit">sign up!</string>
</resources>
